--- a/homepage/static/homepage/css/pages/home.less
+++ b/homepage/static/homepage/css/pages/home.less
@@ -212,41 +212,8 @@
 }
 
 /* Small-screen versions */
-@media screen and (max-width: 1081px) {
-	.homepage .banner {
-
-		.banner_text {
-			position: absolute;
-			bottom: 0;
-			width: 100%;
-		}
-
-		h1 {
-			position: static;
-			text-align: right;
-			padding-right: 6%;
-			width: auto;
-			font-size: 20pt;
-		}
-
-		p {
-			position: static;
-			width: auto;
-			margin: 0;
-			font-size: 11pt;
-		}
-	}
-}
-
 @media screen and (max-width: 601px) {
 	.homepage {
-
-		.banner {
-			h1 {
-				font-size: 18pt;
-			}
-		}
-
 		.news {
 			.news_story .story_image {
 				img {
